# robotvibecoder

./: Pipfile  README.md  config.json  pyproject.toml
.github/workflows/: lint.yaml  python-publish.yml
docs/: CLI.md  config.md  generate.md
examples/: ElevatorConstants.java  ElevatorIO.java  ElevatorIOSim.java  ElevatorIOTalonFX.java  ElevatorMechanism.java  WristConstants.java  WristIO.java  WristIOSim.java  WristIOTalonFX.java  WristMechanism.java  config.json  exampleconfig.json  intakeconfig.json  wristconfig.json
examples/arm/: WristIOTalonFX.java  WristMechanism.java  wristconfig.json
examples/elevator/: ElevatorIO.java
examples/indexer/: IntakeIO.java  IntakeIOTalonFX.java  IntakeMechanism.java  intakeconfig.json
src/robotvibecoder/: __about__.py  cli.py  config.py  constants.py  main.py  templating.py
src/robotvibecoder/subcommands/: generate.py  new.py
src/robotvibecoder/templates/: ArmSim.java.j2  MechanismConstants.java.j2  MechanismIOSim.java.j2  MechanismIOTalonFX.java.j2
src/robotvibecoder/templates/ArmElevator/: ArmSim.java.j2  ElevatorSim.java.j2  Mechanism.java.j2
src/robotvibecoder/templates/Indexer/: Mechanism.java.j2  MechanismConstants.java.j2  MechanismIO.java.j2  MechanismIOSim.java.j2  MechanismIOTalonFX.java.j2
src/robotvibecoder_aidnem/: __init__.py  config.py  constants.py  main.py  new.py  templating.py
src/robotvibecoder_aidnem/subcommands/: generate.py  new.py
src/robotvibecoder_aidnem/templates/: ArmMechanismSim.java.j2  ElevatorSim.java.j2  FlywheelIO.java.j2  FlywheelIOTalonFX.java.j2  FlywheelOSim.java.j2  Mechanism.java.j2  MechanismConstants.java.j2  MechanismIO.java.j2  MechanismIO.java.jinja  MechanismIOSim.java.j2  MechanismIOTalonFX.java.j2  hello.txt.jinja
tests/: __init__.py
