[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotvibecoder-aidnem"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
keywords = []
authors = [
  { name = "aidnem", email = "99768676+aidnem@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jinja2==3.1.6"
]

[project.urls]
Documentation = "https://github.com/aidnem/robotvibecoder-aidnem#readme"
Issues = "https://github.com/aidnem/robotvibecoder-aidnem/issues"
Source = "https://github.com/aidnem/robotvibecoder-aidnem"

[project.scripts]
robotvibecoder = "robotvibecoder_aidnem.main:main"

[tool.hatch.version]
path = "src/robotvibecoder_aidnem/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/robotvibecoder_aidnem tests}"

[tool.coverage.run]
source_pkgs = ["robotvibecoder_aidnem", "tests"]
branch = true
parallel = true
omit = [
  "src/robotvibecoder_aidnem/__about__.py",
]

[tool.coverage.paths]
robotvibecoder_aidnem = ["src/robotvibecoder_aidnem", "*/robotvibecoder-aidnem/src/robotvibecoder_aidnem"]
tests = ["tests", "*/robotvibecoder-aidnem/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
