[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotvibecoder"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
keywords = []
authors = [
  { name = "aidnem", email = "99768676+aidnem@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["jinja2==3.1.6"]

[project.urls]
Documentation = "https://github.com/aidnem/robotvibecoder#readme"
Issues = "https://github.com/aidnem/robotvibecoder/issues"
Source = "https://github.com/aidnem/robotvibecoder"

[project.scripts]
robotvibecoder = "robotvibecoder.main:main"

[tool.hatch.version]
path = "src/robotvibecoder/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/robotvibecoder tests}"

[tool.coverage.run]
source_pkgs = ["robotvibecoder", "tests"]
branch = true
parallel = true
omit = ["src/robotvibecoder/__about__.py"]

[tool.coverage.paths]
robotvibecoder = ["src/robotvibecoder", "*/robotvibecoder/src/robotvibecoder"]
tests = ["tests", "*/robotvibecoder/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
