[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "robotvibecoder"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"
keywords = []
authors = [{ name = "team401" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["jinja2==3.1.6", "pick==2.4.0"]

[project.urls]
Documentation = "https://github.com/team401/robotvibecoder#readme"
Issues = "https://github.com/team401/robotvibecoder/issues"
Source = "https://github.com/team401/robotvibecoder"

[project.scripts]
robotvibecoder = "robotvibecoder.main:main"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/robotvibecoder tests}"

[tool.versioningit]

[tool.versioningit.format]
# Format used when there have been commits since the most recent tag:
distance = "{base_version}.post{distance}+{vcs}{rev}"
# Example formatted version: 1.2.3.post42+ge174a1f

# Format used when there are uncommitted changes:
dirty = "{base_version}+d{build_date:%Y%m%d}"
# Example formatted version: 1.2.3+d20230922

# Format used when there are both commits and uncommitted changes:
distance-dirty = "{base_version}.post{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
# Example formatted version: 1.2.3.post42+ge174a1f.d20230922

[tool.coverage.run]
source_pkgs = ["robotvibecoder", "tests"]
branch = true
parallel = true
omit = ["src/robotvibecoder/__about__.py"]

[tool.coverage.paths]
robotvibecoder = ["src/robotvibecoder", "*/robotvibecoder/src/robotvibecoder"]
tests = ["tests", "*/robotvibecoder/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
